--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -22,6 +22,9 @@ jobs:
 
       - name: Install Feedparser
         run: pip install feedparser
+      
+      - name: Install Requests
+        run: pip install requests
 
       - name: Fetch and update README
         run: python update_readme.py
